k3s/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: web
  name: webku
spec:
  selector:
    app: webku
  ports:
  - port: 3000
    targetPort: 3000
